<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mycard.MainActivity4">

    <ImageView
        android:id="@+id/image_we"
        android:src="@drawable/we"
        android:contentDescription="@string/ContentDescription"
        style="@style/Image_Style" />

    <TextView
        android:id="@+id/We"
        android:text="@string/text_we"
        style="@style/Page4_TextStyle"/>

    <Button
        android:id="@+id/button4"
        android:text="@string/action"
        style="@style/Page4_ButtonStyle" />

</RelativeLayout>
