<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mycard.MainActivity2">

    <ImageView
        android:id="@+id/image_me"
        android:src="@drawable/me"
        android:contentDescription="@string/ContentDescription"
        style="@style/Image_Style" />

    <TextView
        android:id="@+id/Me"
        android:text="@string/text_me"
        style="@style/Page2_TextStyle"/>

    <Button
        android:id="@+id/button2"
        android:text="@string/action"
        style="@style/Page2_ButtonStyle" />

</RelativeLayout>

