<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mycard.MainActivity5">

    <ImageView
        android:id="@+id/image_together"
        android:src="@drawable/together"
        android:contentDescription="@string/ContentDescription"
        style="@style/Image_Style" />

    <TextView
        android:id="@+id/TogetherWeCan"
        android:text="@string/text_together"
        style="@style/Page5_Text_Up_Style" />

    <TextView
        android:id="@+id/SaveTheEarth"
        android:text="@string/text_SavetheEarth"
        style="@style/Page5_Text_Bottom_Style"
        android:onClick="onClick"
        android:clickable="true"/>

</RelativeLayout>
